<resources>
    <string name="app_name">Animenia</string>
    <string name="title_favorite">Favorite</string>
    <string name="text_animenia">Animenia</string>
    <string name="text_favorite">Favorite</string>
    <string name="source">Source</string>
    <string name="title">Title</string>
    <string name="episodes">Episodes</string>
    <string name="statistics">Statistics</string>
    <string name="synopsis">Synopsis</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="currently_airing">Currently airing</string>
</resources>