<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_800"
        android:elevation="4dp"
        android:layout_alignParentTop="true"
        app:navigationIcon="@null"
        app:titleTextColor="@color/white"
        tools:targetApi="lollipop" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:background="@color/dark_grey">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_anime"
                android:layout_width="@dimen/dimen_180dp"
                android:layout_height="@dimen/dimen_300dp"
                android:background="@color/grey_200"
                app:cardCornerRadius="@dimen/dimen_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_anime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/title"
                android:textSize="@dimen/text_dimen_16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_anime"
                app:layout_constraintTop_toTopOf="@id/cv_anime" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_value"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/text_dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="Sample" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_source"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:gravity="start"
                android:text="@string/source"
                android:textSize="@dimen/text_dimen_16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_source_value"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/text_dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_source"
                tools:text="Sample" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_eps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:gravity="start"
                android:textColor="@color/grey_100"
                android:text="@string/episodes"
                android:textSize="@dimen/text_dimen_16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_source_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_eps_value"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/text_dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_eps"
                tools:text="Sample" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_rating"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:gravity="start"
                android:text="@string/rating"
                android:textSize="@dimen/text_dimen_16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_eps_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_rating_value"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/text_dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_rating"
                tools:text="Sample" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_duration"
                android:textColor="@color/grey_100"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:gravity="start"
                android:text="@string/duration"
                android:textSize="@dimen/text_dimen_16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_rating_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_duration_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_100"
                android:gravity="start"
                android:textSize="@dimen/text_dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_duration"
                tools:text="Sample" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_fav"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:drawableStart="@drawable/ic_heart_unlike"
                android:drawablePadding="@dimen/dimen_16dp"
                android:gravity="center"
                android:text="@string/add_to_favorite"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_duration_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_airing_value"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18dp"
                android:gravity="start"
                android:text="@string/currently_airing"
                android:textSize="@dimen/text_dimen_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/cv_anime"
                app:layout_constraintTop_toBottomOf="@id/cv_anime" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_100"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:gravity="start"
                android:text="@string/statistics"
                android:textSize="@dimen/text_dimen_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/cv_anime"
                app:layout_constraintTop_toBottomOf="@id/tv_airing_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_score_value"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/text_dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_stats"
                app:layout_constraintTop_toBottomOf="@id/tv_stats"
                tools:text="Score 4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_synopsis"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:gravity="start"
                android:text="@string/synopsis"
                android:textSize="@dimen/text_dimen_20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/cv_anime"
                app:layout_constraintTop_toBottomOf="@id/tv_score_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_synopsis_value"
                android:layout_width="0dp"
                android:textColor="@color/grey_100"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/text_dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_synopsis"
                app:layout_constraintTop_toBottomOf="@id/tv_synopsis"
                tools:text="Bla bla bla" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
